Subiendo cambios importantes

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,9 +1,30 @@
+*{
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  outline: none;
+  outline-width: 0;
+  box-shadow: none;
+  -moz-box-shadow: none;
+  -webkit-box-shadow: none;
+}
+
+:root{
+  --main-menu: #ffffff;
+  --main-primary: #f16722;
+  --main-secundary: #0d3362;
+  --main-page: #474744;
+  --main-title: #0056c5;
+}
+
 html,
 body {
   padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  background-color: var(--main-menu);
+  overflow-x: hidden;
 }
 
 a {
@@ -11,6 +32,93 @@ a {
   text-decoration: none;
 }
 
-* {
-  box-sizing: border-box;
+main{
+  padding-top: 8em;
+}
+
+.container {
+  min-height: 100vh;
+}
+
+.footer {
+  width: 100vw;
+  height: 100px;
+  display: flex;
+  background: linear-gradient(#104c97 0%, #0d3362 100%);
+  border-top: 1px solid var(--main-primary);
+  color:white;
+  justify-content: center;
+  align-items: center;
+}
+
+.footer img {
+  margin-left: 0.5rem;
+  background:white;
+  padding: .5em;
+  width: 80px;
+  height: 60px;
+  border-radius: 50%;
+}
+
+.footer a {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.logo {
+  height: 3rem;
+}
+
+@media (max-width: 868px) {
+  .footer {
+    padding: 6rem;
+    flex-direction: column-reverse;
+    justify-content: center;
+    text-align: center;
+    background-color: red;
+  }
+}
+
+#snackbar {
+  visibility: hidden; /* Hidden by default. Visible on click */
+  min-width: 250px; /* Set a default minimum width */
+  margin-left: -125px; /* Divide value of min-width by 2 */
+  background-color: #333; /* Black background color */
+  color: #fff; /* White text color */
+  text-align: center; /* Centered text */
+  border-radius: 2px; /* Rounded borders */
+  padding: 16px; /* Padding */
+  position: fixed; /* Sit on top of the screen */
+  z-index: 1; /* Add a z-index if needed */
+  left: 50%; /* Center the snackbar */
+  bottom: 30px; /* 30px from the bottom */
+}
+
+/* Show the snackbar when clicking on a button (class added with JavaScript) */
+#snackbar.show {
+  visibility: visible; /* Show the snackbar */
+  -webkit-animation: fadein 0.5s, fadeout 0.5s 2.5s;
+  animation: fadein 0.5s, fadeout 0.5s 2.5s;
+}
+
+/* Animations to fade the snackbar in and out */
+@-webkit-keyframes fadein {
+  from {bottom: 0; opacity: 0;}
+  to {bottom: 30px; opacity: 1;}
+}
+
+@keyframes fadein {
+  from {bottom: 0; opacity: 0;}
+  to {bottom: 30px; opacity: 1;}
+}
+
+@-webkit-keyframes fadeout {
+  from {bottom: 30px; opacity: 1;}
+  to {bottom: 0; opacity: 0;}
+}
+
+@keyframes fadeout {
+  from {bottom: 30px; opacity: 1;}
+  to {bottom: 0; opacity: 0;}
 }
