Subiendo los cambios, Agregando la parte del filtrado y el orden por precios

--- a/components/Navbar/navbar.module.css
+++ b/components/Navbar/navbar.module.css
@@ -3,6 +3,7 @@
   top: 0;
   width: 100vw;
   z-index: 6;
+  
 }
 
 .navbar {
@@ -11,6 +12,7 @@
   display: flex;
   position: sticky;
   top: 0;
+  
 }
 
 .logo_navbar {
@@ -38,6 +40,8 @@
 .content {
   padding: 2em;
   width: 100vw;
+  max-width: 1800px;
+  margin: 0 auto;
 }
 
 .navbar .content {
