--- a/styles/globals.css
+++ b/styles/globals.css
@@ -37,6 +37,12 @@ main{
 
 }
 
+input[type=text], input[type=email]{
+  width: 100%;
+  padding: 8px 20px;
+  box-sizing: border-box;  
+}
+
 .container {
   min-height: 100vh;
 }
