--- a/styles/globals.css
+++ b/styles/globals.css
@@ -32,12 +32,32 @@ a {
   text-decoration: none;
 }
 
-input[type=text], input[type=email]{
+input[type=text], input[type=email], input[type=number]{
   width: 100%;
   padding: 8px 20px;
   box-sizing: border-box;  
 }
+select{
+  position: relative;
+  overflow: hidden;
+  display: block;
+  margin: auto;
+  width: 100%;
+  height: 100%;
+  padding: 1em;
+  border-bottom: 0px;
+  border-radius: 3px;
+  font-size: 12px;
+  box-shadow: 0px 1em 2em -1.5em rgba(0, 57, 170, 0.5);
+}
 
+select::selection {
+  position: absolute;
+  z-index: 4;
+  right: 1.5em;
+  top: 1.6em;
+  color: #ccc;
+}
 .container {
   min-height: 100vh;
 }
