--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,4 +1,4 @@
-*{
+* {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
@@ -9,7 +9,7 @@
   -webkit-box-shadow: none;
 }
 
-:root{
+:root {
   --main-menu: #ffffff;
   --main-primary: #f16722;
   --main-secundary: #0d3362;
@@ -21,9 +21,10 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-  background-color: var(--main-menu);
+  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans,
+    Helvetica Neue, sans-serif;
+  background-color: #f1f2fa;
+  color: #0d3362;
   overflow-x: hidden;
 }
 
@@ -32,12 +33,19 @@ a {
   text-decoration: none;
 }
 
-input[type=text], input[type=email], input[type=number]{
+input[type="text"],
+input[type="email"],
+input[type="number"] {
   width: 100%;
   padding: 8px 20px;
-  box-sizing: border-box;  
+  box-sizing: border-box;
+  height: 50px;
+  outline: none;
+  background-color: #fff;
+  color: #0d3362;
+  font-size: 1em;
 }
-select{
+select {
   position: relative;
   overflow: hidden;
   display: block;
@@ -66,17 +74,17 @@ select::selection {
   width: 100vw;
   height: 100px;
   display: flex;
-  background: linear-gradient(#104c97 0%, #0d3362 100%);
+  background:  var(--main-secundary);
   border-top: 1px solid var(--main-primary);
-  color:white;
+  color: white;
   justify-content: center;
   align-items: center;
 }
 
 .footer img {
   margin-left: 0.5rem;
-  background:white;
-  padding: .5em;
+  background: white;
+  padding: 0.5em;
   width: 80px;
   height: 60px;
   border-radius: 50%;
@@ -98,7 +106,6 @@ select::selection {
     flex-direction: column-reverse;
     justify-content: center;
     text-align: center;
-    background-color: red;
   }
 }
 
@@ -126,21 +133,45 @@ select::selection {
 
 /* Animations to fade the snackbar in and out */
 @-webkit-keyframes fadein {
-  from {bottom: 0; opacity: 0;}
-  to {bottom: 30px; opacity: 1;}
+  from {
+    bottom: 0;
+    opacity: 0;
+  }
+  to {
+    bottom: 30px;
+    opacity: 1;
+  }
 }
 
 @keyframes fadein {
-  from {bottom: 0; opacity: 0;}
-  to {bottom: 30px; opacity: 1;}
+  from {
+    bottom: 0;
+    opacity: 0;
+  }
+  to {
+    bottom: 30px;
+    opacity: 1;
+  }
 }
 
 @-webkit-keyframes fadeout {
-  from {bottom: 30px; opacity: 1;}
-  to {bottom: 0; opacity: 0;}
+  from {
+    bottom: 30px;
+    opacity: 1;
+  }
+  to {
+    bottom: 0;
+    opacity: 0;
+  }
 }
 
 @keyframes fadeout {
-  from {bottom: 30px; opacity: 1;}
-  to {bottom: 0; opacity: 0;}
+  from {
+    bottom: 30px;
+    opacity: 1;
+  }
+  to {
+    bottom: 0;
+    opacity: 0;
+  }
 }
