--- a/styles/globals.css
+++ b/styles/globals.css
@@ -53,6 +53,7 @@ select {
   width: 100%;
   height: 100%;
   padding: 1em;
+  background: var(--main-menu);
   border-bottom: 0px;
   border-radius: 3px;
   font-size: 12px;
